WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255345
PGM Crash Analysis
https://bugs.webkit.org/show_bug.cgi?id=255345
Summary
PGM Crash Analysis
Brandon
Reported
2023-04-12 09:12:56 PDT
Enable support to analyze PGM crashes.
Attachments
Add attachment
proposed patch, testcase, etc.
Brandon
Comment 1
2023-04-12 09:16:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12655
Radar WebKit Bug Importer
Comment 2
2023-04-12 11:23:53 PDT
<
rdar://problem/107950096
>
EWS
Comment 3
2023-04-17 20:33:44 PDT
Committed
263055@main
(f209607bc696): <
https://commits.webkit.org/263055@main
> Reviewed commits have been landed. Closing PR #12655 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug